<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Pollux Beta</string>
	<string name="login_submit">ログイン</string>
	<string name="delete_token">ログアウト</string>
	<string name="login_button">ログイン</string>
	<string name="reacquire_group">更新</string>
	<string name="post_button">投稿する</string>
	<string name="now_posting">投稿中...</string>
	<string name="post_ok">投稿しました</string>
	<string name="post_ng">投稿に失敗しました</string>
	<string name="deps_max">これ以上はコメントできません</string>
	<string name="content_empty">おや？操作ミスですか？</string>
	<string name="over_char_num">文字数が140文字を超えています</string>
	<string name="network_error">おや？回線の調子が悪いようです。後ほどやりなおしてください。</string>
	<string name="out_of_memory_error">コメント数が多くて表示できません。</string>
	<string name="reacquire_room">更新</string>
	<string name="app_description">polluxは、グループ内情報共有ツール\n\n\"youRoom(ユールーム)\"のクライアントアプリです。\n\n各ルームの新着情報のチェックや新規投稿などを行うことが可能です。
	</string>
	<string name="setting">設定</string>
	<string name="updateTimePreferenceTitle">定期新着確認</string>
	<string name="notificationPreferenceTitle">新着通知</string>
	<string name="deleteCachePreferenceTitle">キャッシュの削除</string>
	<string name="deleteCache">キャッシュを削除する</string>
	<string name="deleteCacheSummary">全てのルームのキャッシュを削除する</string>
	<string name="deleteCacheDialogTitle">キャッシュを削除しますか？</string>
	<string name="deleteCacheDialogMessage">キャッシュを削除すると、キャッシュ再構築のため次回起動時には時間がかかります</string>
	<string name="now_loading">読み込み中...</string>
	<string name="display_attachment">添付：</string>
	<string name="attachment_type_text">ロングテキスト</string>
	<string name="attachment_type_image">画像</string>
	<string name="attachment_type_file">ファイル</string>
	<string name="attachment_type_link">リンク</string>
	<string name="edit_entry">編集する</string>
	<string name="delete_entry">削除する</string>
	<string name="delete_dialog_title">エントリの削除</string>
	<string name="delete_dialog_message">本当に削除しますか？</string>
	<string name="now_deleting">削除中...</string>
	<string name="just_now">Just Now</string>
	<string name="sec_ago">秒前</string>
	<string name="minutes_ago">分前</string>
	<string name="hours_ago">時間前</string>
	<string name="read_more">もっと読む</string>
	<string name="start_check_update">更新確認を開始しました。</string>
	<string name="stop_check_update">更新確認を終了しました。</string>
	<string name="num_of_updates_more_than">件以上の更新があります。</string>
	<string name="num_of_updates">件の更新があります。</string>
</resources>
