<LinearLayout android:id="@+id/LinearLayout0" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@+id/linearLayout1" android:paddingLeft="20dip" android:paddingRight="20dip" android:paddingTop="20dip" android:paddingBottom="40dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:src="@drawable/pollux_icon" android:id="@+id/pollux" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
        <TextView android:text="@string/app_name" android:id="@+id/app_title" android:textStyle="bold|italic" android:textSize="25px" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"></TextView>
        <Button android:text="@string/login_button" android:id="@+id/login_button" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="right"></Button>
	</LinearLayout>
	<TextView android:text="@string/app_description" android:id="@+id/TextView01" android:background="@drawable/text_background" android:layout_width="fill_parent" android:gravity="center|left" android:padding="10px" android:layout_height="wrap_content"></TextView>
</LinearLayout>
